# wgv

./: Cargo.toml  LICENSE  README.md  lefthook.toml  mise.toml
.github/workflows/: ci.yml  release.yml
schemas/v1.10.0/: manifest.defaultLocale.1.10.0.json  manifest.installer.1.10.0.json  manifest.locale.1.10.0.json  manifest.singleton.1.10.0.json  manifest.version.1.10.0.json
schemas/v1.12.0/: manifest.defaultLocale.1.12.0.json  manifest.installer.1.12.0.json  manifest.locale.1.12.0.json  manifest.singleton.1.12.0.json  manifest.version.1.12.0.json
schemas/v1.28.0/: manifest.defaultLocale.1.28.0.json  manifest.installer.1.28.0.json  manifest.locale.1.28.0.json  manifest.singleton.1.28.0.json  manifest.version.1.28.0.json
schemas/v1.9.0/: manifest.defaultLocale.1.9.0.json  manifest.installer.1.9.0.json  manifest.locale.1.9.0.json  manifest.singleton.1.9.0.json  manifest.version.1.9.0.json
src/: common.rs  discovery.rs  error.rs  lib.rs  logger.rs  main.rs  manifest.rs  schema.rs  schema_header.rs  schema_validation.rs  validation.rs  yaml_helpers.rs
tasks/: smoke.sh
tests/: validation_tests.rs
tests/fixtures/archive_nested_types/: Test.Archive.installer.yaml  Test.Archive.locale.en-US.yaml  Test.Archive.yaml
tests/fixtures/duplicate_installers/: Test.Duplicate.installer.yaml  Test.Duplicate.locale.en-US.yaml  Test.Duplicate.yaml
tests/fixtures/exe_missing_switches/: Test.ExeSwitch.yaml
tests/fixtures/invalid_duplicate_archive/: Test.DupArchive.installer.yaml  Test.DupArchive.locale.en-US.yaml  Test.DupArchive.yaml
(+11 files in other folders)
