[package]
name = "wgv"
version = "0.1.0"
edition = "2021"
description = "Cross-platform winget manifest validator"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml-rust2 = "0.10"
jsonschema = "0.29"
regex = "1"
url = "2"
thiserror = "2"
